registration and login api changes for fcmId to store
